AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=stupidalgorithm
AM_CXXFLAGS=$(INTI_CFLAGS)
stupidalgorithm_SOURCES=main.cpp  \
						initializer.cpp\
						alg_datastruct.cpp \
						para_base.cpp \
						de_para.cpp \
						eda_para.cpp \
						ep_para.cpp \
						ga_para.cpp \
						pso_para.cpp \
						problem_base.cpp \
						output_base.cpp \
						rand_val.cpp \
						funcdef.cpp \
						batch_conf.cpp \
						boundary_handler.cpp \
						mop_common.cpp \
						pso_alg.cpp \
						psobc_alg.cpp \
						dpso_alg.cpp \
						dpso_m_alg.cpp \
						mpso_alg.cpp \
						arpso_alg.cpp \
						de_alg.cpp \
						de-eda_alg.cpp \
						dmde_alg.cpp \
						jde.cpp \
						ede_alg.cpp \
						mode_alg.cpp \
						mosade_alg.cpp \
						my_sde_alg.cpp \
						nsde_alg.cpp \
						sde_alg.cpp \
						bbde_alg.cpp \
						spde_alg.cpp \
						eda_alg.cpp \
						fep_alg.cpp \
						ga_alg.cpp \
						ifep_alg.cpp \
						alloc_obj.cpp \
						scheduler.cpp 
include_HEADERS=com_alg.h \
				alg_base.h \
				algo_datastruct.h \
				all_alg.h \
				alloc_obj.h \
				all_para.h \
				arpso_alg.h \
				batch_conf.h \
				bbde_alg.h \
				boundary_handler.h \
				cmdline_para_type.h \
				com_alg.h \
				de_alg.h \
				de-eda_alg.h \
				de_para.h \
				dmde_alg.h \
				dpso_alg.h \
				eda_alg.h \
				eda_para.h \
				ede_alg.h \
				ep_para.h \
				fep_alg.h \
				funcdef.h \
				ga_alg.h \
				ga_para.h \
				ifep_alg.h \
				initializer.h \
				jde.h \
				mode_alg.h \
				mop_common.h \
				mosade_alg.h \
				mpso_alg.h \
				my_sde_alg.h \
				nsde_alg.h \
				output_base.h \
				para_base.h \
				problem_base.h \
				pso_alg.h \
				psobc_alg.h \
				pso_para.h \
				rand_val.h \
				scheduler.h \
				sde_alg.h \
				spde_alg.h
#stupidalgorithm_LDADD=../linux_specific/lib/libboost_date_time.a ../linux_specific/lib/libboost_program_options.a \
#					   ../linux_specific/lib/libboost_thread.a
LIBS = -lpthread
LIBS += -lboost_date_time -lboost_program_options -lboost_thread
