#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])

# Name and version
AM_INIT_AUTOMAKE(stupidalgorithm, 1.0)

AC_CONFIG_SRCDIR([main.cpp])
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

# Checks for library functions.
#AC_CHECK_FUNCS([floor pow select sqrt])

# Output files
#AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT(Makefile)
